### Fix bug (HEAD -> main)
>Sat, 18 Feb 2023 14:45:44 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix types (origin/main)
>Sat, 18 Feb 2023 06:17:59 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix small bugs
>Sat, 18 Feb 2023 06:17:27 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add strategy to custom directories name during STAC creation
>Sat, 18 Feb 2023 06:16:18 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add comments and improve methods name
>Fri, 17 Feb 2023 13:14:00 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Update README.md
>Thu, 16 Feb 2023 13:34:20 +0100

>Author: Jean-Christophe Malapert (jcmalapert@googlemail.com)

>Commiter: GitHub (noreply@github.com)




### Convert Readme.rst to markdown
>Thu, 16 Feb 2023 13:30:53 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### First import of the project
>Thu, 16 Feb 2023 11:39:46 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)



