@@ -1,4 +1,14 @@
-### Fix bug (HEAD -> main)
+### Add new storage strategy to handle a large number of items in one collection (HEAD -> main)
+>Mon, 20 Feb 2023 13:44:31 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix bug (origin/main)
 >Sat, 18 Feb 2023 14:45:44 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix types (origin/main)
+### Fix types
 >Sat, 18 Feb 2023 06:17:59 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
